syntax = "proto3";

package com.gbusiness.product.api;

option java_multiple_files = true;
option java_package = "com.gbusiness.agentslot.api";
option java_outer_classname = "ProductServiceProto";

service ProductService {
  rpc GetProductsDisplay (GetProductsDisplayRequest) returns (GetProductsDisplayResponse) {}
}
message GetProductsDisplayRequest {
  // Empty. Retrieve all available products.
}

// Response for GetProductsDisplayRequest.
message GetProductsDisplayResponse {
  // List of retrieved products.
  repeated Product products = 1;

  // List of retrieved product topics.
  repeated ProductTopic product_topics = 2;

  // List of retrieved topic's categories.
  repeated TopicCategory topic_categories = 3;

  // If any error occurred, this field is set with proper information.
  //google.rpc.Status api_error = 4;
}

// Definition of a product
message Product {
  // Unique identifier for a product with following format:
  // "product/[uid]"
  string id = 1;

  // Title of the product.
  string title = 2;

  // Short description of the product.
  string description = 3;

  // List of topic ids that represent the product.
  repeated string topic_ids = 4;
}

// Definition of a product's topic
message ProductTopic {
  // Unique identifier for a topic with following format:
  // "topic/[uid]"
  string id = 1;

  // Unique id of the category this topic belongs to.
  string category_id = 2;

  // Short description of the topic.
  string description = 3;
}

message TopicCategory {
  // Unique identifier for a category with following format:
  // "category/[uid]"
  string id = 1;

  // Short description of the category.
  string description = 2;
}
